<resources>

    <string name="app_name">My ToDo List</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_task">Add Task</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="calculation_dialog_remove_text">calculation_dialog_remove_text</string>
    <string name="calculation_dialog_button_ok">calculation_dialog_button_ok</string>

</resources>
